fix about page spacing/width breakpoints

--- a/src/views/about/about.module.scss
+++ b/src/views/about/about.module.scss
@@ -1,23 +1,23 @@
 @import "src/tokens/index";
 
-.unicornLogo {
-	margin-right: var(--spc-1x);
-	width: 56px;
-	height: 56px;
-
-	@include from($desktopSmall) {
-		width: 192px;
-		height: 192px;
-	}
-}
-
 .banner {
 	display: flex;
 	justify-content: center;
 
 	svg {
-		width: 640px;
+		width: var(--max-width_s);
 		height: auto;
+	}
+}
+
+.aboutBody {
+	max-width: var(--max-width_m);
+	margin: 0 auto;
+
+	padding: var(--site-spacing) 0;
+
+	@include from($tabletLarge) {
+		padding: var(--site-spacing);
 	}
 }
 
@@ -50,17 +50,14 @@
 	}
 }
 
-.aboutBody :global(.center) {
-	text-align: center;
-}
-
 .unicorns {
 	display: grid;
 	grid-template-columns: repeat(1, minmax(0, 1fr));
 	gap: var(--site-spacing);
 
-	@include from($tabletLarge) {
+	@include from($tabletSmall) {
 		grid-template-columns: repeat(2, minmax(0, 1fr));
+		gap: var(--spc-2x) var(--site-spacing);
 	}
 }
 
@@ -68,6 +65,11 @@
 	display: grid;
 	grid-template-columns: repeat(2, minmax(0, 1fr));
 	gap: var(--site-spacing);
+	padding: var(--site-spacing) 0;
+
+	@include from($tabletSmall) {
+		grid-template-columns: repeat(3, minmax(0, 1fr));
+	}
 
 	@include from($tabletLarge) {
 		grid-template-columns: repeat(4, minmax(0, 1fr));
